the first stone is placed (sic)

--- a/SiftyKurss/SiftyKurss.csproj
+++ b/SiftyKurss/SiftyKurss.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="SiftyKurss.cs" />
+    <Compile Include="RollingCube.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
