--- a/SiftyKurss/SiftyKurss.csproj
+++ b/SiftyKurss/SiftyKurss.csproj
@@ -37,16 +37,18 @@
     <Reference Include="System">
     </Reference>
     <Reference Include="JsonFx">
-      <HintPath>..\..\..\..\..\..\..\..\..\Sifteo\Sifteo-SDK-1_1_2\bin\Runtimes\mono\Current\sifteo\JsonFx.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Applications\Sifteo_sdk_1_1_2\Siftdev.app\Contents\Resources\Runtimes\Mono\Current\sifteo\JsonFx.dll</HintPath>
     </Reference>
     <Reference Include="Sifteo">
-      <HintPath>..\..\..\..\..\..\..\..\..\Sifteo\Sifteo-SDK-1_1_2\bin\Runtimes\mono\Current\sifteo\Sifteo.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\..\Applications\Sifteo_sdk_1_1_2\Siftdev.app\Contents\Resources\Runtimes\Mono\Current\sifteo\Sifteo.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="SiftyKurss.cs" />
     <Compile Include="RollingCube.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="GameCube.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
